[package]
name = "event_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
scylla = "0.7"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
warp = "0.3"
log = "0.4"
env_logger = "0.10"
ulid = { version = "1", features = ["serde"] }
prometheus = "0.11"
lazy_static = "1.4"